Add hierarchical_primitives page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="author" content="Despoina Paschalidou">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" type="image/png" href="data/bunny.png"/>
 
         <link rel="stylesheet" type="text/css" href="style.css?cache=7733391418498779679">
         <link href="https://fonts.googleapis.com/css?family=Arvo|Roboto&display=swap" rel="stylesheet">
