--- a/learnable-superquadrics.html
+++ b/learnable-superquadrics.html
@@ -1,12 +1,12 @@
 <!Doctype html>
 <html lang="en">
     <head>
-        <title>superquadrics</title>
+        <title>learnable_superquadrics</title>
 
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="author" content="Despoina Paschalidou">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
+        <link rel="icon" type="image/png" href="data/bunny.png"/>
         <link rel="stylesheet" type="text/css" href="style.css?cache=7733391418498779679">
         <link href="https://fonts.googleapis.com/css?family=Arvo|Roboto&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -145,11 +145,11 @@
                     \end{equation*}
                 $$
 
-                <img src="data/learnable_sqs/loss.png" style="width:100%">
+                <img src="data/learnable_sqs/loss.png" style="width:90%">
             </div>
 
             <div class="section-title">Are superquadrics better than cuboids?</div>
-                <img src="data/learnable_sqs/training_evolution.png" style="width:100%">
+                <img src="data/learnable_sqs/training_evolution.png" style="width:70%">
 
                 <div class="content">
                     We visualize the qualitative evolution of superquadrics (top)
@@ -161,7 +161,7 @@
                     achieve a lower loss and hence a higher modeling fidelity.
                 </div>
 
-                <img src="data/learnable_sqs/comparison_sq_with_cubes.png">
+                <img src="data/learnable_sqs/comparison_sq_with_cubes.png" style="width:50%">
 
             <div class="section-title">Evaluation on ShapeNet</div>
                 <div class="content">
@@ -171,7 +171,7 @@
                     unique color, thus primitives illustrated with the same color
                     correspond to the same object part.
                 </div>
-                <img src="data/learnable_sqs/shapenet_comparison.png" style="width:100%;">
+                <img src="data/learnable_sqs/shapenet_comparison.png" style="width:90%;">
                 <div class="content">
                     We visualize predictions for the object categories animals,
                     aeroplane and chairs from the ShapeNet dataset. The top row
@@ -203,13 +203,14 @@
                     primitives (highlighted with the same color) consistently
                     represent feet, legs, arms etc. across different pose.
                 </div>
-                <img src="data/learnable_sqs/humans.png">
+                <img src="data/learnable_sqs/humans.png" style="height:30%;">
 
             <div class="section-title">Acknowledgements</div>
             <div class="content">
                 We thank Michael Black for early discussions on superquadrics.
                 This research was supported by the Max Planck ETH Center for
                 Learning Systems.
+            </div>
             </div>
         </div>
     </body>
